# AJiO_Projekt

server/: Cargo.toml  config.json  database.sql
server/src/: config_provider.rs  database_provider.rs  main.rs
web/: index.php  settings.php
